Bug 154207 - location bar's font is too small/illegible
Summary: location bar's font is too small/illegible
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-17 02:48 UTC by Germain Garand
Modified: 2008-01-04 00:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch for review (668 bytes, patch)
2007-12-17 20:33 UTC, Germain Garand
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Germain Garand 2007-12-17 02:48:32 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

The location bar in konqueror is currently using it's default parent widget font (ie. KGlobalSettings::toolbarFont).

This is ill suited because this font is usually much smaller than the general one, in order to have text-under-icon mode fit.

The location bar is an important widget, one that should always be perfectly legible to ensure good usability and basic security.

Thus it should use KGlobalSettings::generalFont as was the case in KDE 3.
Comment 1 Germain Garand 2007-12-17 20:33:53 UTC
Created attachment 22603 [details]
patch for review
Comment 2 Germain Garand 2008-01-04 00:34:01 UTC
SVN commit 756999 by ggarand:

set konq combobox's default font to be the more sane Global font
so we don't hurt our users eyes by default.

reviewed by Michael Pyne

BUG: 154207



 M  +4 -0      konqmainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=756999