set konq combobox's default font to be the more sane Global font so we don't hurt our users eyes by default.

reviewed by Michael Pyne

BUG: 154207


svn path=/trunk/KDE/kdebase/apps/; revision=756999